# anti-phishing

./: Cargo.toml
src/: main.rs
