[package]
name = "rust-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util = "0.3.21"
reqwest = { version="0.11.10", features=["json"] }
serde = { version = "1.0", features = ["derive"] }
twilight-gateway = { version = "0.10.1" }
twilight-http = { version = "0.10.1" }
tokio = { version = "1.17.0", default-features = false, features = ["macros", "rt-multi-thread", "sync"] }
